# test-cli

./: README.md  pyproject.toml
test_cli/: main.py
