[project]
name = "test_cli"
description = ""
authors = [{ name = "jmlopez-rod" }]
readme = "README.md"
license = 'MIT'
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
]

[project.scripts]
test-cli = "test_cli.main:main"

[dependency-groups]
dev = [
]

[tool.hatch]
build.packages = ["test_cli"]
metadata.allow-direct-references = true
version.path = 'test_cli/version.py'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
